deploy-staging/deployment/notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-deployment
  labels:
    app: notification
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
      # annotations:
      #   dapr.io/enabled: "true"
      #   dapr.io/app-id: "notification"
      #   dapr.io/app-port: "6002"
    spec:
      containers:
      - name: notification
        image: logfire/notification
        imagePullPolicy: Never
        ports:
        - name: http
          containerPort: 6002
