deploy-staging/deployment/goweb-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gowebapi-deployment
  labels:
    app: gowebapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gowebapi
  template:
    metadata:
      labels:
        app: gowebapi
      # annotations:
      #   dapr.io/enabled: "true"
      #   dapr.io/app-id: "gowebapi"
      #   dapr.io/app-port: "8000"
    spec:
      containers:
      - name: gowebapi
        # image: docker.io/rahulprakash11/gowebapi:latest
        image: logfire/gowebapi
        imagePullPolicy: Never
        ports:
        - name: http
          containerPort: 8000
      restartPolicy: Always
      # imagePullSecrets:
      #   - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: gowebapi
spec:
  selector:
    app: gowebapi
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http
